--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ OUR STAFF
                             <img class="img-responsive" src="images/team/01.jpg" alt="">
                         </div>
                         <div class="team-info">
-                            <h3>Musinguzi deo</h3>
+                            <h3>Nuttro</h3>
                             <span>CEO</span> 
                         </div> 
                         <ul class="social-icons">
@@ -246,7 +246,7 @@ OUR STAFF
                             <img class="img-responsive" src="images/team/02.jpg" alt="">
                         </div>
                         <div class="team-info">
-                            <h3>Mike great</h3>
+                            <h3>Gift</h3>
                             <span>General Manager</span> 
                         </div> 
                         <ul class="social-icons">
